# fhir-to-bigquery

./: .dockerignore  AGENTS.md  DESIGN.md  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: checks.yml  docker.yml
fhir_to_bigquery/: __init__.py  fhir_bulk_data.py  high_water_mark.py  main.py
tests/: test_fhir_bulk_data.py  test_high_water_mark.py  test_main.py
