[project]
name = "fhir-to-bigquery"
version = "0.1.0"
description = "Pulls all data from a FHIR API using $export, and loads it into a bigquery database"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
fhir-to-bigquery = "fhir_to_bigquery.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fhir_to_bigquery"]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "ruff>=0.15.17",
    "ty>=0.0.50",
]
