[project]
name = "fhir-to-bigquery"
version = "0.1.0"
description = "Pulls all data from a FHIR API using $export, and loads it into a bigquery database"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-cloud-bigquery>=3.42.0",
    "httpx2>=2.4.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "ruff>=0.15.17",
    "ty>=0.0.49",
]

[project.scripts]
fhir-to-bigquery = "fhir_to_bigquery.main:main"

[tool.uv]
exclude-newer = "7 days"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fhir_to_bigquery"]
